Add the rootframe as a field of fold file